lib/minisat-sys/_bindings-cminisat-static.rs

/* automatically generated by rust-bindgen 0.66.1 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct minisat_solver_t {
    _unused: [u8; 0],
}
pub type minisat_solver = minisat_solver_t;
pub type minisat_Var = ::std::os::raw::c_int;
pub type minisat_Lit = ::std::os::raw::c_int;
pub type minisat_lbool = ::std::os::raw::c_int;
extern "C" {
    pub fn minisat_new() -> *mut minisat_solver;
}
extern "C" {
    pub fn minisat_delete(s: *mut minisat_solver);
}
extern "C" {
    pub fn minisat_newVar(s: *mut minisat_solver) -> minisat_Var;
}
extern "C" {
    pub fn minisat_newLit(s: *mut minisat_solver) -> minisat_Lit;
}
extern "C" {
    pub fn minisat_mkLit(x: minisat_Var) -> minisat_Lit;
}
extern "C" {
    pub fn minisat_mkLit_args(x: minisat_Var, sign: ::std::os::raw::c_int) -> minisat_Lit;
}
extern "C" {
    pub fn minisat_negate(p: minisat_Lit) -> minisat_Lit;
}
extern "C" {
    pub fn minisat_var(p: minisat_Lit) -> minisat_Var;
}
extern "C" {
    pub fn minisat_sign(p: minisat_Lit) -> minisat_bool;
}
extern "C" {
    pub fn minisat_addClause(s: *mut minisat_solver, len: ::std::os::raw::c_int, ps: *mut minisat_Lit) -> minisat_bool;
}
extern "C" {
    pub fn minisat_addClause_begin(s: *mut minisat_solver);
}
extern "C" {
    pub fn minisat_addClause_addLit(s: *mut minisat_solver, p: minisat_Lit);
}
extern "C" {
    pub fn minisat_addClause_commit(s: *mut minisat_solver) -> minisat_bool;
}
extern "C" {
    pub fn minisat_simplify(s: *mut minisat_solver) -> minisat_bool;
}
extern "C" {
    pub fn minisat_solve(s: *mut minisat_solver, len: ::std::os::raw::c_int, ps: *mut minisat_Lit) -> minisat_bool;
}
extern "C" {
    pub fn minisat_limited_solve(s: *mut minisat_solver, len: ::std::os::raw::c_int, ps: *mut minisat_Lit) -> minisat_lbool;
}
extern "C" {
    pub fn minisat_solve_begin(s: *mut minisat_solver);
}
extern "C" {
    pub fn minisat_solve_addLit(s: *mut minisat_solver, p: minisat_Lit);
}
extern "C" {
    pub fn minisat_solve_commit(s: *mut minisat_solver) -> minisat_bool;
}
extern "C" {
    pub fn minisat_limited_solve_commit(s: *mut minisat_solver) -> minisat_lbool;
}
extern "C" {
    pub fn minisat_okay(s: *mut minisat_solver) -> minisat_bool;
}
extern "C" {
    pub fn minisat_setPolarity(s: *mut minisat_solver, v: minisat_Var, b: ::std::os::raw::c_int);
}
extern "C" {
    pub fn minisat_setDecisionVar(s: *mut minisat_solver, v: minisat_Var, b: ::std::os::raw::c_int);
}
extern "C" {
    pub fn minisat_get_l_True() -> minisat_lbool;
}
extern "C" {
    pub fn minisat_get_l_False() -> minisat_lbool;
}
extern "C" {
    pub fn minisat_get_l_Undef() -> minisat_lbool;
}
extern "C" {
    pub fn minisat_value_Var(s: *mut minisat_solver, x: minisat_Var) -> minisat_lbool;
}
extern "C" {
    pub fn minisat_value_Lit(s: *mut minisat_solver, p: minisat_Lit) -> minisat_lbool;
}
extern "C" {
    pub fn minisat_modelValue_Var(s: *mut minisat_solver, x: minisat_Var) -> minisat_lbool;
}
extern "C" {
    pub fn minisat_modelValue_Lit(s: *mut minisat_solver, p: minisat_Lit) -> minisat_lbool;
}
extern "C" {
    pub fn minisat_num_assigns(s: *mut minisat_solver) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn minisat_num_clauses(s: *mut minisat_solver) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn minisat_num_learnts(s: *mut minisat_solver) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn minisat_num_vars(s: *mut minisat_solver) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn minisat_num_freeVars(s: *mut minisat_solver) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn minisat_conflict_len(s: *mut minisat_solver) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn minisat_conflict_nthLit(s: *mut minisat_solver, i: ::std::os::raw::c_int) -> minisat_Lit;
}
extern "C" {
    pub fn minisat_set_conf_budget(s: *mut minisat_solver, x: ::std::os::raw::c_int);
}
extern "C" {
    pub fn minisat_set_prop_budget(s: *mut minisat_solver, x: ::std::os::raw::c_int);
}
extern "C" {
    pub fn minisat_no_budget(s: *mut minisat_solver);
}
extern "C" {
    pub fn minisat_interrupt(s: *mut minisat_solver);
}
extern "C" {
    pub fn minisat_clearInterrupt(s: *mut minisat_solver);
}
extern "C" {
    pub fn minisat_setFrozen(s: *mut minisat_solver, v: minisat_Var, b: minisat_bool);
}
extern "C" {
    pub fn minisat_isEliminated(s: *mut minisat_solver, v: minisat_Var) -> minisat_bool;
}
extern "C" {
    pub fn minisat_eliminate(s: *mut minisat_solver, turn_off_elim: minisat_bool) -> minisat_bool;
}
extern "C" {
    pub fn minisat_set_verbosity(s: *mut minisat_solver, v: ::std::os::raw::c_int);
}
extern "C" {
    pub fn minisat_num_conflicts(s: *mut minisat_solver) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn minisat_num_decisions(s: *mut minisat_solver) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn minisat_num_restarts(s: *mut minisat_solver) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn minisat_num_propagations(s: *mut minisat_solver) -> ::std::os::raw::c_int;
}
